# johnny-slitherhand

./: Dockerfile  README.md  logic.py  main.py  pyproject.toml
.github/workflows/: ci.yaml
